# Elia-Colab-Forecast

./: .gitignore  00_forecasters_comparison.ipynb  01_analysis_results_forecasters_comparison.ipynb  LICENSE  PREDICO.ipynb  PREDICO_module.ipynb  PREDICO_notebook.ipynb  README.md  analysis_results.ipynb  dockerfile  main.ipynb  main.py  pyproject.toml  requirements.txt  run_SIMULATION.ipynb  run_simulation_predictions.ipynb  run_simulation_predictions_contribution.ipynb  v1_2stage_pipeline.ipynb
config/: PREDICO_setting.py  ramp_calib_setting.py  setting.py  simulation_setting.py  simulation_setting_with_ramps.py
example_elia/: buyers_resources.json  forecasts.csv  measurements.csv  sellers_resources.json
general_notebooks/: 0_run_variability.ipynb  11_ramp_detection_box.ipynb  12_ramp_detection_lof.ipynb  13_ramp_detection_kde.ipynb  14_ramp_detection_eq.ipynb  21_results_analysis_box.ipynb  22_results_analysis_lof.ipynb  30_variability_detection_plots.ipynb
info_model/: b1r1_previous_day.pickle  previous_day.pickle
notebook/: 0_run_variability.ipynb  11_ramp_detection_box.ipynb  12_ramp_detection_lof.ipynb  13_ramp_detection_kde.ipynb  14_ramp_detection_eq.ipynb  22_results_analysis_lof.ipynb  23_results_analysis_kde.ipynb  24_results_analysis_eq.ipynb  30_variability_detection_plots.ipynb
notebooks_module_contribution_assessment/: 20_methods_contribution_assessment_comparison.ipynb
notebooks_module_probabilistic_forecasting/: 00_forecasters_comparison.ipynb  01_analysis_results_forecasters_comparison.ipynb
notebooks_module_wind_ramp_detection/: 10_wind_ramp_detection.ipynb
source/: ml_engine.py  (+1 more)
(+71 files in other folders)
