[tool.poetry]
name = "predico-research"
version = "0.1.0"
description = ""
authors = ["giovanni.buroni <giovanni.buroni@inesctec.pt>"]
readme = "README.md"
packages = [{include = "predico_research"}]

[tool.poetry.dependencies]
python = "3.9.19"
contourpy = "1.3.0"
cycler = "0.12.1"
fonttools = "4.55.2"
importlib-resources = "6.4.5"
kiwisolver = "1.4.7"
loguru = "0.7.2"
matplotlib = "3.9.3"
numpy = "2.0.2"
packaging = "24.2"
pandas = "2.2.3"
patsy = "1.0.1"
pillow = "11.0.0"
pyparsing = "3.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
scikit-posthocs = "0.11.0"
scipy = "1.13.1"
seaborn = "0.13.2"
six = "1.17.0"
statsmodels = "0.14.4"
tqdm = "4.67.1"
tzdata = "2024.2"
zipp = "3.21.0"
scikit-learn = "1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
