[tool.poetry]
name = "predico-research"
version = "0.1.0"
description = ""
authors = ["giovanni.buroni <giovanni.buroni@inesctec.pt>"]
readme = "README.md"
packages = [{include = "predico_research"}]

[tool.poetry.dependencies]
python = "3.9.19"
bottleneck = "1.4.2"
colorama = "0.4.6"
ipykernel = "6.29.5"
loguru = "0.7.2"
numexpr = "2.10.1"
pipdeptree = "2.24.0"
python-dotenv = "1.0.1"
scikit-learn = "1.5.1"
scikit-posthocs = "0.11.0"
setuptools = "75.1.0"
tqdm = "4.67.1"
unicodedata2 = "15.1.0"
wheel = "0.44.0"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
